objects/LLC_BI__Account_Demographic__c.object
<CustomObject>
    <description>This object stores additional account information for demographic.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Users populate this optional lookup field to reference the Account record to which an Account Demographic record refers. By default, this field is blank.</description>
        <inlineHelpText>Enter the Account record to which this Account Demographic refers.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Demographics</relationshipLabel>
        <relationshipName>Account_Demographics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Business_Ownership_Status__c</fullName>
        <description>Users populate this optional multi-select picklist field to indicate the business ownership status. By default, it is empty.</description>
        <inlineHelpText>Select value(s) to indicate the business ownership status.</inlineHelpText>
        <label>Business Ownership Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minority-owned business</fullName>
                </value>
                <value>
                    <fullName>Women-owned business</fullName>
                </value>
                <value>
                    <fullName>LGBTQI+-owned business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Business_Start_Date__c</fullName>
        <description>Users populate this optional date field to specify the business start date. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the date when the business started.</inlineHelpText>
        <label>Business Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Estimated_Time_In_Business__c</fullName>
        <description>Users select this optional picklist field to specify the time in business if Business Start Date is missing. By default, it is empty.</description>
        <inlineHelpText>Use this field to specify the time in business if Business Start Date is missing.</inlineHelpText>
        <label>Estimated Time in Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant has been in business less than two years</fullName>
                </value>
                <value>
                    <fullName>Applicant has been in business two or more years</fullName>
                </value>
                <value>
                    <fullName>Not provided by applicant and otherwise undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Demographic</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Demographic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>